8228633: [lworld][c1] method invocation fails if the return type is an unloaded Q type

Reviewed-by: thartmann